--- a/entities/groups/lights.yaml
+++ b/entities/groups/lights.yaml
@@ -16,6 +16,6 @@ all_lights:
     - light.living_room_light
     - light.dining_room_light
     - light.kitchen_light
-    - light.master_bath_light
+    - light.master_bath_dimmer
     - switch.under_cabinet_lights_switch_1
     - switch.dinette_light_switch_1
