--- a/ui_lovelace_minimalist/dashboard/views/01-home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/01-home.yaml
@@ -332,6 +332,10 @@ cards:
           grid-area: bath
         variables:
           affix: master_bath
+          entity_1:
+            entity_id: light.master_bath_dimmer
+            templates:
+              - yellow_on
           entity_2:
             entity_id: switch.master_bath_fan_relay_2
             templates:
