--- a/ui_lovelace_minimalist/dashboard/views/rooms/office.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/office.yaml
@@ -238,9 +238,9 @@ cards:
       - node_number: 20
 
   - type: custom:decluttering-card
-    template: z_wave_single_relay_no_scene
+    template: z_wave_single_relay
     variables:
       - sensor_prefix: office_fan
-      - sensor_domain: relay
+      - sensor_domain: switch
       - name: Fan Relay
       - node_number: 24
