--- a/ui_lovelace_minimalist/card_declutter/z_wave_double_relay.yaml
+++ b/ui_lovelace_minimalist/card_declutter/z_wave_double_relay.yaml
@@ -1,15 +1,19 @@
 z_wave_double_relay:
+  default:
+    - switch1: switch
+    - switch2: switch
+    - sensor_domain: relay
   card:
     type: custom:stack-in-card
     cards:
       - type: custom:layout-card
         layout_type: grid
         layout:
-          grid-template-columns: repeat(5, 1fr)
+          grid-template-columns: repeat(6, 1fr)
           grid-template-rows: repeat(2, 1fr)
           grid-template-areas: |
-            "firmware firmware seen switch1 switch2"
-            "scene1 scene1 scene2 scene2 status"
+            "firmware firmware firmware firmware switch1 switch2"
+            "seen seen . . status status"
           margin: 0
           padding: 0
           card_margin: 0
@@ -25,7 +29,7 @@ z_wave_double_relay:
             view_layout:
               grid-area: firmware
           - type: custom:mushroom-entity-card
-            entity: 'switch.[[sensor_prefix]]_[[sensor_domain]]'
+            entity: '[[switch1]].[[sensor_prefix]]_[[sensor_domain]]'
             primary_info: none
             secondary_info: none
             view_layout:
@@ -38,7 +42,7 @@ z_wave_double_relay:
                   align-items: center;
                 }
           - type: custom:mushroom-entity-card
-            entity: 'switch.[[sensor_prefix]]_[[sensor_domain]]_2'
+            entity: '[[switch2]].[[sensor_prefix]]_[[sensor_domain]]_2'
             primary_info: none
             secondary_info: none
             view_layout:
@@ -49,28 +53,6 @@ z_wave_double_relay:
               style: |
                 ha-card {
                   align-items: center;
-                }
-          - type: custom:mushroom-entity-card
-            entity: 'event.[[sensor_prefix]]_[[sensor_domain]]_scene_001'
-            name: Scene 1
-            icon_type: none
-            view_layout:
-              grid-area: scene1
-            card_mod:
-              style: |
-                ha-card {
-                  text-align: center;
-                }
-          - type: custom:mushroom-entity-card
-            entity: 'event.[[sensor_prefix]]_[[sensor_domain]]_scene_002'
-            name: Scene 2
-            icon_type: none
-            view_layout:
-              grid-area: scene2
-            card_mod:
-              style: |
-                ha-card {
-                  text-align: center;
                 }
           - type: custom:mushroom-entity-card
             entity: 'sensor.[[node_number]]_last_seen'
