--- a/ui_lovelace_minimalist/dashboard/views/rooms/attic.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/attic.yaml
@@ -1,8 +1,29 @@
 title: "Attic"
 path: "attic"
+type: custom:grid-layout
+layout:
+  grid-template-areas: |
+    "header . ."
+    "devices sensors health"
+  mediaquery:
+    # portrait monitor
+    "only screen and (min-width: 769px) and (max-width: 1400px)":
+      grid-template-areas: |
+        "header header"
+        "devices sensors"
+        "health ."
+    # Smartphones
+    "only screen and (max-width: 768px)":
+      grid-template-areas: |
+        "header"
+        "devices"
+        "sensors"
+        "health"
 cards:
   - type: custom:decluttering-card
     template: room_header
+    view_layout:
+      grid-area: header
     variables:
       - sensor_prefix: attic
       - room_name: Attic
@@ -10,59 +31,71 @@ cards:
   #################
   # DEVICES
   #################
-  - type: "custom:button-card"
-    template: card_title
-    label: Devices
-  - type: "custom:button-card"
-    template: card_light
-    entity: switch.water_softener_plug
-    variables:
-      ulm_card_light_name: Water Softener
+  - type: vertical-stack
+    view_layout:
+      grid-area: devices
+    cards:
+      - type: "custom:button-card"
+        template: card_title
+        label: Devices
+      - type: "custom:button-card"
+        template: card_light
+        entity: switch.water_softener_plug
+        variables:
+          ulm_card_light_name: Water Softener
 
   #################
   # SENSORS
   #################
-  - type: "custom:button-card"
-    template: card_title
-    label: Sensors
-
-  - type: horizontal-stack
+  - type: vertical-stack
+    view_layout:
+      grid-area: sensors
     cards:
       - type: "custom:button-card"
-        template: card_graph
-        entity: sensor.ac_heater_4_1min
-        variables:
-          ulm_card_graph_color: "var(--google-yellow)"
-          ulm_card_graph_entity: sensor.ac_heater_4_1min
-          ulm_card_graph_name: AC Heater
-      - type: "custom:button-card"
-        template: card_graph
-        entity: sensor.air_conditioner_2_1min
-        variables:
-          ulm_card_graph_color: "var(--google-yellow)"
-          ulm_card_graph_entity: sensor.air_conditioner_2_1min
-          ulm_card_graph_name: Air Conditioner
+        template: card_title
+        label: Sensors
+
+      - type: horizontal-stack
+        cards:
+          - type: "custom:button-card"
+            template: card_graph
+            entity: sensor.ac_heater_4_1min
+            variables:
+              ulm_card_graph_color: "var(--google-yellow)"
+              ulm_card_graph_entity: sensor.ac_heater_4_1min
+              ulm_card_graph_name: AC Heater
+          - type: "custom:button-card"
+            template: card_graph
+            entity: sensor.air_conditioner_2_1min
+            variables:
+              ulm_card_graph_color: "var(--google-yellow)"
+              ulm_card_graph_entity: sensor.air_conditioner_2_1min
+              ulm_card_graph_name: Air Conditioner
 
   #################
   # DEVICE HEALTH
   #################
-  - type: "custom:button-card"
-    template: card_title
-    label: Device Health
+  - type: vertical-stack
+    view_layout:
+      grid-area: health
+    cards:
+      - type: "custom:button-card"
+        template: card_title
+        label: Device Health
 
-  - type: custom:decluttering-card
-    template: z_wave_plug
-    variables:
-      - sensor_prefix: water_softener
-      - node_number: 29
+      - type: custom:decluttering-card
+        template: z_wave_plug
+        variables:
+          - sensor_prefix: water_softener
+          - node_number: 29
 
-  - type: custom:decluttering-card
-    template: leak_sensors
-    variables:
-      - sensor_prefix: ac_pan
+      - type: custom:decluttering-card
+        template: leak_sensors
+        variables:
+          - sensor_prefix: ac_pan
 
-  - type: custom:decluttering-card
-    template: z_wave_climate
-    variables:
-      - sensor_prefix: attic
-      - node_number: 14
+      - type: custom:decluttering-card
+        template: z_wave_climate
+        variables:
+          - sensor_prefix: attic
+          - node_number: 14
