--- a/ui_lovelace_minimalist/dashboard/views/rooms/guest-bathroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/guest-bathroom.yaml
@@ -1,8 +1,28 @@
 title: "Guest Bathroom"
 path: "guest-bath"
+type: custom:grid-layout
+layout:
+  grid-template-areas: |
+    "header status"
+    "sensors health"
+  mediaquery:
+    # portrait monitor
+    "only screen and (min-width: 769px) and (max-width: 1400px)":
+      grid-template-areas: |
+        "header status"
+        "sensors health"
+    # Smartphones
+    "only screen and (max-width: 768px)":
+      grid-template-areas: |
+        "header"
+        "status"
+        "sensors"
+        "health"
 cards:
   - type: custom:decluttering-card
     template: room_header
+    view_layout:
+      grid-area: header
     variables:
       - sensor_prefix: guest_bath
       - room_name: Guest Bathroom
@@ -11,6 +31,8 @@ cards:
   # STATUS CHIPS
   #################
   - type: custom:mod-card
+    view_layout:
+      grid-area: status
     style:
       hui-horizontal-stack-card$: |
         #root { 
@@ -33,37 +55,51 @@ cards:
           variables:
             ulm_chip_mdi_icon_state_entity: group.cat_food_status
 
-  - type: "custom:button-card"
-    template: card_title
-    label: Sensors
+  #################
+  # SENSORS
+  #################
+  - type: vertical-stack
+    view_layout:
+      grid-area: sensors
+    cards:
+      - type: "custom:button-card"
+        template: card_title
+        label: Sensors
 
-  - type: "custom:button-card"
-    template: card_graph
-    entity: sensor.office_g_bath_garage_3_1min
-    variables:
-      ulm_card_graph_color: "var(--google-yellow)"
-      ulm_card_graph_entity: sensor.office_g_bath_garage_3_1min
-      ulm_card_graph_name: Electricity 1 min
+      - type: "custom:button-card"
+        template: card_graph
+        entity: sensor.office_g_bath_garage_3_1min
+        variables:
+          ulm_card_graph_color: "var(--google-yellow)"
+          ulm_card_graph_entity: sensor.office_g_bath_garage_3_1min
+          ulm_card_graph_name: Electricity 1 min
 
-  - type: "custom:button-card"
-    template: card_input_boolean
-    entity: binary_sensor.air_filter_door_sensor_window_door_is_open
-    variables:
-      ulm_card_input_boolean_force_background_color: true
-      ulm_card_input_boolean_name: Air Filter Door
+      - type: "custom:button-card"
+        template: card_input_boolean
+        entity: binary_sensor.air_filter_door_sensor_window_door_is_open
+        variables:
+          ulm_card_input_boolean_force_background_color: true
+          ulm_card_input_boolean_name: Air Filter Door
 
-  - type: "custom:button-card"
-    template: card_title
-    label: Device Health
+  #################
+  # DEVICE HEALTH
+  #################
+  - type: vertical-stack
+    view_layout:
+      grid-area: health
+    cards:
+      - type: "custom:button-card"
+        template: card_title
+        label: Device Health
 
-  - type: custom:decluttering-card
-    template: z_wave_door_sensor
-    variables:
-      - sensor_prefix: air_filter
-      - node_number: 22
+      - type: custom:decluttering-card
+        template: z_wave_door_sensor
+        variables:
+          - sensor_prefix: air_filter
+          - node_number: 22
 
-  - type: custom:decluttering-card
-    template: z_wave_climate
-    variables:
-      - sensor_prefix: guest_bath
-      - node_number: 8
+      - type: custom:decluttering-card
+        template: z_wave_climate
+        variables:
+          - sensor_prefix: guest_bath
+          - node_number: 8
