--- a/ui_lovelace_minimalist/dashboard/views/rooms/guest-room.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/guest-room.yaml
@@ -1,40 +1,82 @@
 title: "Guest Room"
 path: "guest-bedroom"
+type: custom:grid-layout
+layout:
+  grid-template-areas: |
+    "header . ."
+    "devices sensors health"
+  mediaquery:
+    # portrait monitor
+    "only screen and (min-width: 769px) and (max-width: 1400px)":
+      grid-template-areas: |
+        "header header"
+        "devices sensors"
+        "health ."
+    # Smartphones
+    "only screen and (max-width: 768px)":
+      grid-template-areas: |
+        "header"
+        "devices"
+        "sensors"
+        "health"
 cards:
   - type: custom:decluttering-card
     template: room_header
+    view_layout:
+      grid-area: header
     variables:
       - sensor_prefix: guest_bedroom
       - room_name: Guest Room
 
-  - type: "custom:button-card"
-    template: card_title
-    label: Devices
+  #################
+  # DEVICES
+  #################
+  - type: vertical-stack
+    view_layout:
+      grid-area: devices
+    cards:
+      - type: "custom:button-card"
+        template: card_title
+        label: Devices
 
-  - type: custom:decluttering-card
-    template: cover
-    variables:
-      - sensor_prefix: guest_bedroom
-      - fave_percent: 25
+      - type: custom:decluttering-card
+        template: cover
+        variables:
+          - sensor_prefix: guest_bedroom
+          - fave_percent: 25
 
-  - type: "custom:button-card"
-    template: card_title
-    label: Sensors
+  #################
+  # SENSORS
+  #################
+  - type: vertical-stack
+    view_layout:
+      grid-area: sensors
+    cards:
+      - type: "custom:button-card"
+        template: card_title
+        label: Sensors
 
-  - type: "custom:button-card"
-    template: card_graph
-    entity: sensor.guest_bedroom_16_1min
-    variables:
-      ulm_card_graph_color: "var(--google-yellow)"
-      ulm_card_graph_entity: sensor.guest_bedroom_16_1min
-      ulm_card_graph_name: Electricity 1 min
+      - type: "custom:button-card"
+        template: card_graph
+        entity: sensor.guest_bedroom_16_1min
+        variables:
+          ulm_card_graph_color: "var(--google-yellow)"
+          ulm_card_graph_entity: sensor.guest_bedroom_16_1min
+          ulm_card_graph_name: Electricity 1 min
 
-  - type: "custom:button-card"
-    template: card_title
-    label: Device Health
+  #################
+  # DEVICE HEALTH
+  #################
+  - type: vertical-stack
+    view_layout:
+      grid-area: health
+    cards:
+      - type: "custom:button-card"
+        template: card_title
+        label: Device Health
 
-  - type: custom:decluttering-card
-    template: z_wave_climate
-    variables:
-      - sensor_prefix: guest_bedroom
-      - node_number: 9
+      - type: custom:decluttering-card
+        template: z_wave_climate
+        variables:
+          - sensor_prefix: guest_bedroom
+          - node_number: 9
