--- a/ui_lovelace_minimalist/dashboard/views/rooms/shed.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/shed.yaml
@@ -1,36 +1,65 @@
 title: "Shed"
 path: "shed"
+type: custom:grid-layout
+layout:
+  grid-template-areas: |
+    "header ."
+    "sensors health"
+  mediaquery:
+    # portrait monitor
+    "only screen and (min-width: 769px) and (max-width: 1400px)":
+      grid-template-areas: |
+        "header header"
+        "sensors health"
+    # Smartphones
+    "only screen and (max-width: 768px)":
+      grid-template-areas: |
+        "header"
+        "sensors"
+        "health"
 cards:
   - type: custom:decluttering-card
     template: room_header
+    view_layout:
+      grid-area: header
     variables:
       - sensor_prefix: shed
       - room_name: Shed
+      
+  #################
+  # SENSORS
+  #################
+  - type: vertical-stack
+    view_layout:
+      grid-area: sensors
+    cards:
+      - type: "custom:button-card"
+        template: card_title
+        label: Sensors
 
-  - type: "custom:button-card"
-    template: card_title
-    label: Devices
+      - type: "custom:button-card"
+        template: card_generic_swap
+        entity: binary_sensor.shed_door_sensor_window_door_is_open
 
-  - type: "custom:button-card"
-    template: card_title
-    label: Sensors
+  #################
+  # DEVICE HEALTH
+  #################
+  - type: vertical-stack
+    view_layout:
+      grid-area: health
+    cards:
+      - type: "custom:button-card"
+        template: card_title
+        label: Device Health
 
-  - type: "custom:button-card"
-    template: card_generic_swap
-    entity: binary_sensor.shed_door_sensor_window_door_is_open
+      - type: custom:decluttering-card
+        template: z_wave_climate
+        variables:
+          - sensor_prefix: shed
+          - node_number: 13
 
-  - type: "custom:button-card"
-    template: card_title
-    label: Device Health
-
-  - type: custom:decluttering-card
-    template: z_wave_climate
-    variables:
-      - sensor_prefix: shed
-      - node_number: 13
-
-  - type: custom:decluttering-card
-    template: z_wave_door_sensor
-    variables:
-      - sensor_prefix: shed
-      - node_number: 18
+      - type: custom:decluttering-card
+        template: z_wave_door_sensor
+        variables:
+          - sensor_prefix: shed
+          - node_number: 18
