--- a/ui_lovelace_minimalist/card_declutter/room_header.yaml
+++ b/ui_lovelace_minimalist/card_declutter/room_header.yaml
@@ -2,14 +2,33 @@ room_header:
   card:
     type: vertical-stack
     cards:
-      - type: "custom:button-card"
-        template: chip_back
-        variables:
-          ulm_chip_back_path: home
+      - type: custom:state-switch
+        entity: mediaquery
+        states:
+          # Smartphones
+          "only screen and (max-width: 768px)":
+            type: vertical-stack
+            cards:
+              - type: "custom:button-card"
+                template: chip_back
+                variables:
+                  ulm_chip_back_path: home
 
-      - type: "custom:button-card"
-        template: card_title
-        name: '[[room_name]]'
+              - type: "custom:button-card"
+                template: card_title
+                name: "[[room_name]]"
+          # anything else
+          "all":
+            type: horizontal-stack
+            cards:
+              - type: "custom:button-card"
+                template: chip_back
+                variables:
+                  ulm_chip_back_path: home
+
+              - type: "custom:button-card"
+                template: card_title
+                name: "[[room_name]]"
 
       - type: horizontal-stack
         cards:
