--- a/ui_lovelace_minimalist/dashboard/views/rooms/living-room.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/living-room.yaml
@@ -28,17 +28,12 @@ cards:
     template: card_title
     label: Devices
 
-  - type: horizontal-stack
-    cards:
-      - type: "custom:button-card"
-        template: card_light
-        entity: light.living_room_light
-        variables:
-          ulm_card_light_enable_slider: true
-          ulm_card_light_enable_collapse: true
-      - type: "custom:button-card"
-        template: card_light
-        entity: switch.living_room_switch_switch_1
+  - type: "custom:button-card"
+    template: card_light
+    entity: light.living_room_light
+    variables:
+      ulm_card_light_enable_slider: true
+      ulm_card_light_enable_collapse: true
 
   - type: custom:decluttering-card
     template: cover
@@ -175,3 +170,11 @@ cards:
     variables:
       - sensor_prefix: living_room
       - node_number: 19
+
+  - type: custom:decluttering-card
+    template: z_wave_single_relay
+    variables:
+      - sensor_prefix: living_room_light
+      - sensor_domain: light
+      - name: Light
+      - node_number: 34
