--- a/ui_lovelace_minimalist/dashboard/views/rooms/dining-room.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/dining-room.yaml
@@ -41,3 +41,11 @@ cards:
     variables:
       - sensor_prefix: dining_room
       - node_number: 12
+
+  - type: custom:decluttering-card
+    template: z_wave_single_relay
+    variables:
+      - sensor_prefix: dining_room_light
+      - sensor_domain: light
+      - name: Light
+      - node_number: 37
