--- a/ui_lovelace_minimalist/dashboard/views/rooms/dining-room.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/dining-room.yaml
@@ -1,51 +1,93 @@
 title: "Dining Room"
 path: "dining-room"
+type: custom:grid-layout
+layout:
+  grid-template-areas: |
+    "header . ."
+    "devices sensors health"
+  mediaquery:
+    # portrait monitor
+    "only screen and (min-width: 769px) and (max-width: 1400px)":
+      grid-template-areas: |
+        "header header"
+        "devices sensors"
+        "health ."
+    # Smartphones
+    "only screen and (max-width: 768px)":
+      grid-template-areas: |
+        "header"
+        "devices"
+        "sensors"
+        "health"
 cards:
   - type: custom:decluttering-card
     template: room_header
+    view_layout:
+      grid-area: header
     variables:
       - sensor_prefix: dining_room
       - room_name: Dining Room
 
-  - type: "custom:button-card"
-    template: card_title
-    label: Devices
+  #################
+  # DEVICES
+  #################
+  - type: vertical-stack
+    view_layout:
+      grid-area: devices
+    cards:
+      - type: "custom:button-card"
+        template: card_title
+        label: Devices
 
-  - type: "custom:button-card"
-    template: card_light
-    entity: light.dining_room_light
+      - type: "custom:button-card"
+        template: card_light
+        entity: light.dining_room_light
 
-  - type: custom:decluttering-card
-    template: cover
-    variables:
-      - sensor_prefix: dining_room
+      - type: custom:decluttering-card
+        template: cover
+        variables:
+          - sensor_prefix: dining_room
 
-  - type: "custom:button-card"
-    template: card_title
-    label: Sensors
+  #################
+  # SENSORS
+  #################
+  - type: vertical-stack
+    view_layout:
+      grid-area: sensors
+    cards:
+      - type: "custom:button-card"
+        template: card_title
+        label: Sensors
 
-  - type: "custom:button-card"
-    template: card_graph
-    entity: sensor.dining_micro_12_1min
-    variables:
-      ulm_card_graph_color: "var(--google-yellow)"
-      ulm_card_graph_entity: sensor.dining_micro_12_1min
-      ulm_card_graph_name: Dining Micro
+      - type: "custom:button-card"
+        template: card_graph
+        entity: sensor.dining_micro_12_1min
+        variables:
+          ulm_card_graph_color: "var(--google-yellow)"
+          ulm_card_graph_entity: sensor.dining_micro_12_1min
+          ulm_card_graph_name: Dining Micro
 
-  - type: "custom:button-card"
-    template: card_title
-    label: Device Health
+  #################
+  # DEVICE HEALTH
+  #################
+  - type: vertical-stack
+    view_layout:
+      grid-area: health
+    cards:
+      - type: "custom:button-card"
+        template: card_title
+        label: Device Health
 
-  - type: custom:decluttering-card
-    template: z_wave_climate
-    variables:
-      - sensor_prefix: dining_room
-      - node_number: 12
+      - type: custom:decluttering-card
+        template: z_wave_climate
+        variables:
+          - sensor_prefix: dining_room
+          - node_number: 12
 
-  - type: custom:decluttering-card
-    template: z_wave_single_relay
-    variables:
-      - sensor_prefix: dining_room_light
-      - sensor_domain: light
-      - name: Light
-      - node_number: 37
+      - type: custom:decluttering-card
+        template: z_wave_single_relay
+        variables:
+          - sensor_prefix: dining_room_light
+          - sensor_domain: light
+          - name: Light
+          - node_number: 37
