--- a/ui_lovelace_minimalist/dashboard/views/rooms/guest-room.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/guest-room.yaml
@@ -39,6 +39,10 @@ cards:
         template: card_title
         label: Devices
 
+      - type: "custom:button-card"
+        template: card_light
+        entity: light.dining_room_light
+
       - type: custom:decluttering-card
         template: cover
         variables:
@@ -80,3 +84,11 @@ cards:
         variables:
           - sensor_prefix: guest_bedroom
           - node_number: 9
+
+      - type: custom:decluttering-card
+        template: z_wave_single_relay
+        variables:
+          - sensor_prefix: guest_bedroom_light
+          - sensor_domain: light
+          - name: Light
+          - node_number: 39
