--- a/ui_lovelace_minimalist/dashboard/views/01-home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/01-home.yaml
@@ -393,6 +393,7 @@ cards:
             entity_id: switch.garage_opener_plug
             templates:
               - blue_on
+              - red_off
           entity_3:
             entity_id: input_boolean.washing_machine_on
             templates:
@@ -420,6 +421,7 @@ cards:
             entity_id: switch.water_softener_plug
             templates:
               - blue_on
+              - red_off
 
       #################
       # SHED
